questioning my style choices

--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,13 @@
     padding: 0;
     box-sizing: border-box;
 }
-h1{
+/* h1{
     text-align: center;
 }
+
+h2{
+    text-align: center;
+} */
 
 body{
     font-family: verdana;
