--- a/css/style.css
+++ b/css/style.css
@@ -14,43 +14,12 @@
     font-family: 'Montserrat', sans-serif;
 }
 
-h2{
-    font-weight:600;
-}
-/****************************************************************************************************************************/
-/* HOME | LOCAL SECTION */
-.card-home{
-    background-color: #898AA6;
-    height: 100vh;
-    text-align: center;
-    min-height: 1000px;
-
-    display: flex;
-    align-items: center;
-    padding:30px 50px;
-    min-width: 300px;
+.short-elements{
+    display:none;
 }
 
-.card-home-content{
-    /*background-color: #898AA6;*/
-    width: 100%;
-}
-
-.btn-go-right{
-    width:100px;
-}
-
-.btn-scroll-down{
-    width:100px;
-}
-/*****************************************************************************************/
-/* HOME | INTRODUCTION SECTION */
-#home-intro{
-    background-color: #C9BBCF;
-}
-
-#header-intro{
-    font-weight: 600;
+.long-elements{
+    display:inline-block;
 }
 
 .font-italics{
@@ -60,6 +29,76 @@ h2{
 .font-thin{
     font-weight: 200;
 }
+
+.font-bold{
+    font-weight: 600;
+}
+/****************************************************************************************************************************/
+/* HOME | LOCAL SECTION */
+.card-home{
+    background-color: #898AA6;
+    height: 100vh;
+    width: 100vw;
+    text-align: center;
+    min-height: 1000px;
+
+    display: flex;
+    align-items: center;
+    padding: 30px 50px;
+    min-width: 450px;
+
+    position:absolute;
+}
+
+.card-home-content{
+    /*background-color: #898AA6;*/
+    width: 100%;
+    text-align: center;
+}
+
+.btn-go-right{
+    width:100px;
+}
+
+.btn-scroll-down{
+    width:100px;
+}
+
+.home-card-hide{
+    visibility:hidden;
+}
+
+.home-card-show{
+    display:flex;
+    visibility:visible;
+}
+
+/*****************************************************************************************/
+/* HOME | INTRODUCTION SECTION */
+#home-intro{
+    background-color: #C9BBCF;
+    text-align: left;
+}
+
+#header-intro{
+    font-weight: 600;
+}
+
+#home-intro-content{
+    display:flex;
+    justify-content: center;
+    flex-wrap: nowrap;
+    text-align: left;
+}
+
+#home-intro-content-left{
+
+}
+
+#home-intro-content-right{
+    margin-top:150px;
+}
+
 /*****************************************************************************************/
 /* HOME | WORK SAMPLES SECTION */
 #home-samples{
@@ -77,6 +116,7 @@ h2{
 }
 
 
+
 /*****************************************************************************************/
 /* HOME | CONTACT SECTION */
 #home-contact{
@@ -86,24 +126,55 @@ h2{
 /*****************************************************************************************/
 /****************************************************************************************************************************/
 /* MEDIA | SHORT SECTION */
-@media(max-width: 780px){
+@media(max-width: 1100px){
     .card-home{
         height:auto;
         padding:30px 35px;
+        position:initial;
+    }
+    .short-elements{
+        display:inline-block;
+    }
+    .long-elements{
+        display:none;
     }
     .grid-home-showcase-cover{
         max-width: 360px;
         width:100%
+    }
+
+    #home-intro-content{
+        text-align: center;
+    }
+}
+
+/* I WILL come back to this */
+@media(max-width: 450px){
+    *{
+        background-color: white;
     }
 }
 /*****************************************************************************************/
 /* MEDIA | LONG SECTION */
 @media(min-width: 1750px){
     .card-home-content{
-        background-color: #898AA6;
+        /*background-color: #898AA6;*/
         /*Dynamically changing margin*/
         margin-left: 90px auto;
+        
     }
+    .long-elements{
+        display:inline-block;
+    }
+
+    .short-elements{
+        display:none;
+    }
+
+    /*.grid-home-showcase{
+        justify-content: left;
+        flex-wrap: nowrap;
+    }*/
 }
 
 
