--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
+
 }*/
 /****************************************************************************************************************************/
 /* IMPORTS | GLOBAL */
@@ -12,6 +12,7 @@
 *{
     scroll-behavior:smooth;
     font-family: 'Montserrat', sans-serif;
+    overflow:hidden;
 }
 
 .short-elements{
@@ -69,8 +70,10 @@
 }
 
 .home-card-show{
+    position:absolute;
     display:flex;
     visibility:visible;
+    z-index: -2;
 }
 
 /*****************************************************************************************/
@@ -127,6 +130,12 @@
 /****************************************************************************************************************************/
 /* MEDIA | SHORT SECTION */
 @media(max-width: 1100px){
+    *{
+        overflow: visible;
+    }
+    body{
+        overflow-x:hidden;
+    }
     .card-home{
         height:auto;
         padding:30px 35px;
@@ -161,7 +170,7 @@
         /*background-color: #898AA6;*/
         /*Dynamically changing margin*/
         margin-left: 90px auto;
-        
+
     }
     .long-elements{
         display:inline-block;
@@ -175,6 +184,32 @@
         justify-content: left;
         flex-wrap: nowrap;
     }*/
+}
+
+
+/* NOTE: ADD A MIN-HEIGHT SECTION FOR THE LONG SECTION B/C WE DON'T HAVE SCROLL ANYMORE */
+/****************************************************************************************************************************/
+/* ANIMATIONS */
+@keyframes slide-down-out{
+  0%{
+    z-index: 1;
+  }
+  75%{
+    opacity:0.5;
+  }
+  99%{
+    z-index: 1;
+  }
+  100%{
+    transform:translate(0px, 1000px);
+    opacity:0;
+    z-index: -1;
+  }
+}
+
+.slide-down-out{
+  animation-name: slide-down-out;
+  animation-duration:0.4s;
 }
 
 
