+ Fixed a bug where transition from med -> large does not add the classes back to the respective pages

--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,7 @@
 
 /*****************************************************************************************/
 /****************************************************************************************************************************/
-/* MEDIA | SHORT SECTION */
+/* MEDIA | MED SECTION */
 @media(max-width: 1100px){
     *{
         overflow: visible;
