--- a/css/style.css
+++ b/css/style.css
@@ -212,6 +212,28 @@
   animation-duration:0.4s;
 }
 
+@keyframes slide-up-out{
+  0%{
+    z-index: 1;
+  }
+  75%{
+    opacity:0.5;
+  }
+  99%{
+    z-index: 1;
+  }
+  100%{
+    transform:translate(0px, -1000px);
+    opacity:0;
+    z-index: -1;
+  }
+}
+
+.slide-up-out{
+  animation-name: slide-up-out;
+  animation-duration:0.4s;
+}
+
 
 /* h1{
     text-align: center;
