+ Added a WIP page + Added links to the featured works (grid still WIP) + Modified most links to open in a new tab

--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,11 @@
     font-weight: 500;
 }
 
+.wip{
+    background-color: #898AA6;
+    text-align: center;
+}
+
 .bottom-center{
     position: fixed;
     left: 50%;
