+ Commented out the white background for debug work so that it shows up properly on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -202,9 +202,9 @@
 
 /* I WILL come back to this */
 @media screen and (max-width: 450px){
-    *{
+    /**{
         background-color: white;
-    }
+    }*/
 }
 /*****************************************************************************************/
 /* MEDIA | LONG SECTION */
